# FineLLM

./: .dockerignore  .gitignore  Dockerfile  README.md  README_SPACE.md  pyproject.toml  requirements-deploy.txt
.claude/: settings.json
.github/workflows/: ci.yml  deploy-space.yml
configs/: deployment_config.yaml  dpo_config.yaml  sft_config.yaml
docs/: bench_mock_results.json  data_card.md  demo.html  go_no_go_checklist.md  rapport_technique.docx  rapport_technique.md
notebooks/: 01_data_preparation.ipynb  02_training.ipynb  02_training_kaggle.ipynb
scripts/: bench_latency.py  demo_api.py  push_model.py  serve_local.sh
src/data/: prepare_datasets.py
src/deployment/: serve.py
src/evaluation/: evaluate_model.py
src/training/: dpo_trainer.py  sft_trainer.py
tests/: test_serve.py
